WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152484
FTL B3 should do doubleToInt32
https://bugs.webkit.org/show_bug.cgi?id=152484
Summary
FTL B3 should do doubleToInt32
Filip Pizlo
Reported
2015-12-21 11:12:19 PST
Patch forthcoming.
Attachments
the patch
(16.98 KB, patch)
2015-12-21 12:09 PST
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-12-21 12:09:22 PST
Created
attachment 267759
[details]
the patch
WebKit Commit Bot
Comment 2
2015-12-21 12:10:48 PST
Attachment 267759
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLB3Output.cpp:97: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/ftl/FTLB3Output.cpp:109: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3
2015-12-21 12:52:47 PST
Comment on
attachment 267759
[details]
the patch r=me
Filip Pizlo
Comment 4
2015-12-21 12:55:29 PST
Landed in
http://trac.webkit.org/changeset/194341
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug