Source/JavaScriptCore/b3/B3Validate.cpp
@@ -221,11 +221,6 @@ public:
                 VALIDATE(isInt(value->child(0)->type()), ("At ", *value));
                 VALIDATE(value->type() == Double, ("At ", *value));
                 break;
-            case DToI32:
-                VALIDATE(value->numChildren() == 1, ("At ", *value));
-                VALIDATE(value->child(0)->type() == Double, ("At ", *value));
-                VALIDATE(value->type() == Int32, ("At ", *value));
-                break;
             case FloatToDouble:
                 VALIDATE(value->numChildren() == 1, ("At ", *value));
                 VALIDATE(value->child(0)->type() == Float, ("At ", *value));
