Source/JavaScriptCore/ftl/FTLB3Output.cpp
@@ -30,8 +30,11 @@
 #if FTL_USES_B3
 
 #include "B3MathExtras.h"
+#include "B3StackmapGenerationParams.h"
 
 namespace JSC { namespace FTL {
+
+using namespace B3;
 
 Output::Output(State& state)
     : CommonValues(state.context)
@@ -59,68 +62,100 @@ void Output::appendTo(LBasicBlock block)
     m_block = block;
 }
 
-B3::StackSlotValue* Output::lockedStackSlot(size_t bytes)
+StackSlotValue* Output::lockedStackSlot(size_t bytes)
 {
-    return m_block->appendNew<B3::StackSlotValue>(m_proc, origin(), bytes, B3::StackSlotKind::Locked);
+    return m_block->appendNew<StackSlotValue>(m_proc, origin(), bytes, StackSlotKind::Locked);
 }
 
 LValue Output::load(TypedPointer pointer, LType type)
 {
-    LValue load = m_block->appendNew<B3::MemoryValue>(m_proc, B3::Load, type, origin(), pointer.value());
+    LValue load = m_block->appendNew<MemoryValue>(m_proc, Load, type, origin(), pointer.value());
     pointer.heap().decorateInstruction(load, *m_heaps);
     return load;
 }
 
 LValue Output::doublePowi(LValue x, LValue y)
 {
+    // FIXME: powDoubleInt32() should be inlined here since Output knows about block layout and
+    // should be involved in any operation that creates blocks.
+    // https://bugs.webkit.org/show_bug.cgi?id=152223
     auto result = powDoubleInt32(m_proc, m_block, origin(), x, y);
     m_block = result.first;
     return result.second;
 }
 
+bool Output::hasSensibleDoubleToInt()
+{
+    return optimizeForX86();
+}
+
+LValue Output::doubleToInt(LValue value)
+{
+    PatchpointValue* result = patchpoint(Int32);
+    result->append(value, ValueRep::SomeRegister);
+    result->setGenerator(
+        [] (CCallHelpers& jit, const StackmapGenerationParams& params) {
+            jit.truncateDoubleToInt32(params[1].fpr(), params[0].gpr());
+        });
+    result->effects = Effects::none();
+    return result;
+}
+
+LValue Output::doubleToUInt(LValue value)
+{
+    PatchpointValue* result = patchpoint(Int32);
+    result->append(value, ValueRep::SomeRegister);
+    result->setGenerator(
+        [] (CCallHelpers& jit, const StackmapGenerationParams& params) {
+            jit.truncateDoubleToUint32(params[1].fpr(), params[0].gpr());
+        });
+    result->effects = Effects::none();
+    return result;
+}
+
 LValue Output::load8SignExt32(TypedPointer pointer)
 {
-    LValue load = m_block->appendNew<B3::MemoryValue>(m_proc, B3::Load8S, B3::Int32, origin(), pointer.value());
+    LValue load = m_block->appendNew<MemoryValue>(m_proc, Load8S, Int32, origin(), pointer.value());
     pointer.heap().decorateInstruction(load, *m_heaps);
     return load;
 }
 
 LValue Output::load8ZeroExt32(TypedPointer pointer)
 {
-    LValue load = m_block->appendNew<B3::MemoryValue>(m_proc, B3::Load8Z, B3::Int32, origin(), pointer.value());
+    LValue load = m_block->appendNew<MemoryValue>(m_proc, Load8Z, Int32, origin(), pointer.value());
     pointer.heap().decorateInstruction(load, *m_heaps);
     return load;
 }
 
 LValue Output::load16SignExt32(TypedPointer pointer)
 {
-    LValue load = m_block->appendNew<B3::MemoryValue>(m_proc, B3::Load16S, B3::Int32, origin(), pointer.value());
+    LValue load = m_block->appendNew<MemoryValue>(m_proc, Load16S, Int32, origin(), pointer.value());
     pointer.heap().decorateInstruction(load, *m_heaps);
     return load;
 }
 
 LValue Output::load16ZeroExt32(TypedPointer pointer)
 {
-    LValue load = m_block->appendNew<B3::MemoryValue>(m_proc, B3::Load16Z, B3::Int32, origin(), pointer.value());
+    LValue load = m_block->appendNew<MemoryValue>(m_proc, Load16Z, Int32, origin(), pointer.value());
     pointer.heap().decorateInstruction(load, *m_heaps);
     return load;
 }
 
 void Output::store(LValue value, TypedPointer pointer)
 {
-    LValue store = m_block->appendNew<B3::MemoryValue>(m_proc, B3::Store, origin(), value, pointer.value());
+    LValue store = m_block->appendNew<MemoryValue>(m_proc, Store, origin(), value, pointer.value());
     pointer.heap().decorateInstruction(store, *m_heaps);
 }
 
 void Output::store32As8(LValue value, TypedPointer pointer)
 {
-    LValue store = m_block->appendNew<B3::MemoryValue>(m_proc, B3::Store8, origin(), value, pointer.value());
+    LValue store = m_block->appendNew<MemoryValue>(m_proc, Store8, origin(), value, pointer.value());
     pointer.heap().decorateInstruction(store, *m_heaps);
 }
 
 void Output::store32As16(LValue value, TypedPointer pointer)
 {
-    LValue store = m_block->appendNew<B3::MemoryValue>(m_proc, B3::Store16, origin(), value, pointer.value());
+    LValue store = m_block->appendNew<MemoryValue>(m_proc, Store16, origin(), value, pointer.value());
     pointer.heap().decorateInstruction(store, *m_heaps);
 }
 
@@ -152,10 +187,10 @@ LValue Output::baseIndex(LValue base, LValue index, Scale scale, ptrdiff_t offse
 
 void Output::branch(LValue condition, LBasicBlock taken, Weight takenWeight, LBasicBlock notTaken, Weight notTakenWeight)
 {
-    m_block->appendNew<B3::ControlValue>(
+    m_block->appendNew<ControlValue>(
         m_proc, B3::Branch, origin(), condition,
-        B3::FrequentedBlock(taken, takenWeight.frequencyClass()),
-        B3::FrequentedBlock(notTaken, notTakenWeight.frequencyClass()));
+        FrequentedBlock(taken, takenWeight.frequencyClass()),
+        FrequentedBlock(notTaken, notTakenWeight.frequencyClass()));
 }
 
 } } // namespace JSC::FTL
